# ReCreate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
datasets/appworld/config/: task_cache.json
datasets/appworld/docker/: Dockerfile
datasets/dacode/: requirements.txt
datasets/dacode/da_agent/agent/: agents.py  models.py
datasets/dacode/da_agent/configs/: post_process.py
datasets/dacode/da_agent/evaluators/: evaluation.py
datasets/dacode/da_code/configs/task/: dm.jsonl
datasets/dacode/docker/: Dockerfile
datasets/ds1000/: load_data.py
datasets/ds1000/data/ds1000_edit/0/: code_context.py  metadata.json
datasets/ds1000/data/ds1000_edit/1/: code_context.py  metadata.json
datasets/ds1000/data/ds1000_edit/10/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/100/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/101/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/102/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/103/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/104/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/105/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/106/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/107/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/108/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/109/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/11/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/110/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/111/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/112/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/113/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/114/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/115/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/116/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/117/: code_context.py  metadata.json  prompt.txt
datasets/ds1000/data/ds1000_edit/118/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/119/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/12/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/120/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/121/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/122/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/123/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/124/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/data/ds1000_edit/125/: code_context.py  metadata.json  prompt.txt  reference_code.txt
datasets/ds1000/docker/: Dockerfile
datasets/math/data/: aime24.json  aime25.json  amc23.json
datasets/math/docker/: Dockerfile
datasets/swebench/: .pre-commit-config.yaml  pyproject.toml
datasets/swebench/swebench/: __init__.py
datasets/swebench/swebench/harness/: __init__.py  docker_build.py  docker_utils.py  grading.py  prepare_images.py  remove_containers.py  reporting.py  run_evaluation.py  utils.py
datasets/swebench/swebench/harness/constants/: __init__.py  c.py  go.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py
datasets/swebench/swebench/harness/dockerfiles/: __init__.py  c.py  go.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py
datasets/swebench/swebench/harness/log_parsers/: __init__.py  c.py  go.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py
datasets/swebench/swebench/harness/modal_eval/: __init__.py  run_evaluation_modal.py  run_evaluation_modal_entrypoint.py  utils.py
datasets/swebench/swebench/harness/test_spec/: __init__.py  create_scripts.py  javascript.py  python.py  test_spec.py  utils.py
scripts/: analyze_tool_memory_usage.py  parallel_evolve.py  run_all_domains.sh  run_evolve.sh
scripts/evolve_utils/: __init__.py  evolution.py  scaffold_ops.py  stats.py  trajectory.py  utils.py
scripts/tests/: run_appworld_test.py  run_dacode_test.py  run_ds1000_test.py  run_math_test.py  run_swebench_test.py
src/minisweagent/: __init__.py
src/minisweagent/agents/: default.py
src/minisweagent/environments/: docker.py
src/minisweagent/models/: __init__.py  anthropic.py  litellm_model.py
src/minisweagent/models/utils/: cache_control.py  key_per_thread.py
src/recreate_agent/: __init__.py  agent_runner.py  recreate_agent.py  result_collector.py  scaffold.py  setup_workspace.py  stats_collector.py
src/recreate_agent/adapters/: __init__.py  appworld_adapter.py  base.py  dacode_adapter.py  ds1000_adapter.py  math_adapter.py  swe_adapter.py
src/recreate_agent/evaluators/: __init__.py  dacode.py  dacode_environment.py  ds1000.py  math.py  swebench.py
src/recreate_agent/prompts/: meta_batch_synthesis.jinja2  meta_initial_instance.jinja2  meta_instance.jinja2  meta_system.jinja2
src/recreate_agent/tools/: __init__.py  inspect_in_docker.py  memory_manager.py  read_trajectory.py  scaffold_editor.py  search_memory.py  tool_manager.sh  web_search.py  write_memory.py
(+3643 files in other folders)
